[package]
name = "pagerduty-cli"
version = "0.1.0"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version =  "0.10", features = ["rustls-tls", "json"], default-features = false }
log = "0.4"
clap = "2.33"
flexi_logger = "0.15"
dotenv = "*"
tokio = { version = "0.2", features = ["full"] }
indicatif = "0.14"
petgraph = "0.5"
atty = "0.2"
lazy_static = "1.4"
json = "0.12"
csv = "1.1"